DP-23905 spacing fixes for flexible links on service sections

--- a/docroot/themes/custom/mass_theme/overrides/css/service-section.css
+++ b/docroot/themes/custom/mass_theme/overrides/css/service-section.css
@@ -15,6 +15,21 @@
   padding-right: 40px;
 }
 
+.service-section .ma__collapsible-header__title {
+  font-size: 2rem;
+}
+
+.service-section .ma__callout-links-three-up h3 {
+  margin-bottom: 0;
+}
+
+.service-section .ma__callout-links-three-up p {
+  margin-top: 0.5rem;
+}
+
+.service-section .ma__callout-links-three-up__container {
+  margin-top: 2rem;
+}
 
 .service-section--hidden-title > section > header,
 .service-section--hidden-title > section > .ma__stacked-row__container {
